added preliminary version of timer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(HEADERS
 	include/ludutils/lud_mem_stream.hpp
 	include/ludutils/lud_assert.hpp
 	include/ludutils/lud_misc.hpp
+	include/ludutils/lud_timer.hpp
 )
 
 
